# django-mcp

./: README.md  pyproject.toml
examples/: client.py  server_fastmcp.py
examples/django_5/: run.sh
examples/django_5/django_5/: asgi.py  mcp_app.py  settings.py  urls.py  wsgi.py
examples/django_5/proxy/: urls.py  views.py
examples/simple-auth-client/mcp_simple_auth_client/: main.py
src/django_mcp/: apps.py  auth_provider.py  consumers.py  middleware.py  routes.py  streamable_http_consumer.py  streamable_http_manager.py  streamable_http_proxy_manager.py  types.py  urls.py  views.py
src/django_mcp/auth/: provider.py
src/django_mcp/auth/handlers/: register.py
src/django_mcp/lowlevel/: __init__.py  proxy.py
src/django_mcp/mcp/auth/: provider_reference.py  routes_reference.py
src/django_mcp/methods/: completion_complete.py  ping.py  prompts_list.py  resources_list.py  resources_read.py  resources_templates_list.py  server_capabilities.py  tools_list.py
src/django_mcp/session/: base.py  proxy.py
src/django_mcp/views/: auth.py  auth_old.py  authorize.py  proxy.py
src/django_mcp/views/auth/: authorize.py  login.py  login_callback.py  oauth_authorization_server.py  oauth_protected_resource.py  register.py  token.py
