[project]
name = "django-modelcontextprotocol"
dynamic = ["version"]
description = ""
readme = "README.md"
authors = [
    { name = "Peter Pak", email = "ppak10@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "channels>=4.2.2",
    "django>=4.0",
    "djangorestframework>=3.16.0",
    "mcp==1.11.0",
    "uvicorn>=0.34.3",
]

[project.urls]
Homepage = "https://github.com/ppak10/django-modelcontextprotocol"
Repository = "https://github.com/ppak10/django-modelcontextprotocol"
Issues = "https://github.com/ppak10/django-modelcontextprotocol/issues"

[project.optional-dependencies]
dev = [
    "django-stubs>=5.2.2",
    "djangorestframework-stubs>=3.16.1",
]

